<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_planning"
        android:icon="@drawable/ic_planning"
        android:title="@string/nav_planning" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_templates"
        android:icon="@drawable/ic_template"
        android:title="@string/nav_templates" />
    <item
        android:id="@+id/nav_foods"
        android:icon="@drawable/ic_food"
        android:title="@string/nav_foods" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
